public/css/main.less
@import "responsive.less";
@import "menu.less";
@import "search.less";
@import "form.less";

@font-face {
    font-family: "Handlee";
    src: url(../fonts/Handlee-Regular.ttf);
}
@font-face {
    font-family:"Handlee";
    font-style:normal;
    font-weight:400;
    font-display:auto;
    src:url(../fonts/Handlee-Regular.eot);
    src:url(../fonts/Handlee-Regular.eot?#iefix) format("embedded-opentype"),
    url(../fonts/Handlee-Regular.woff2) format("woff2"),
    url(../fonts/Handlee-Regular.woff) format("woff"),
    url(../fonts/Handlee-Regular.ttf) format("truetype"),
    url(../fonts/Handlee-Regular.svg) format("svg")
}

@font-face {
    font-family:"Open Sans";
    font-style:normal;
    font-weight:400;
    font-display:auto;
    src:url(../fonts/OpenSans-Regular.eot);
    src:url(../fonts/OpenSans-Regular.eot?#iefix) format("embedded-opentype"),
    url(../fonts/OpenSans-Regular.woff2) format("woff2"),
    url(../fonts/OpenSans-Regular.woff) format("woff"),
    url(../fonts/OpenSans-Regular.ttf) format("truetype"),
    url(../fonts/OpenSans-Regular.svg) format("svg")
}

:root {
    --light-blue:#7a80bf;
    --bg:#4e559a;
    --light-bg:rgba(255,255,255,0.7);
    --cta:#e4cd2a;
}

* {
    box-sizing: border-box;
}

html {
    /* 1rem = 10px */
    font-size: 62.5%;
}

body {
    font-size:1.6rem;
    /*background:var(--bg);*/
    background:linear-gradient(180deg, var(--light-blue),var(--light-blue), var(--bg)) no-repeat var(--bg);
}

html, body {
    height: 100%;
    width: 100%;
    margin:0;
    padding:0;
    font-family: "Open Sans", sans-serif;
    text-align:justify;
}

main {
    background:var(--light-bg);
}

h1, h2, h3, .site-title {
    font-family:Handlee, sans-serif;
    text-transform: uppercase;
    font-weight:700;
}

h1 {
    font-size: 3rem;
}

h2 {
    font-size: 2.5rem;
}

h3 {
    font-size: 2rem;
}

main a {
    color:var(--bg);
    font-weight: 700;
    text-shadow:0.1rem 0.1rem 0.1rem var(--light-bg);
}

a:hover {
    color:var(--light-bg);
    text-shadow:0.1rem 0.1rem 0.1rem var(--bg);
}

img {
    width:20rem;
    box-shadow:0 0 .2rem .1rem var(--cta);
    border-radius: .3rem;
}

.components input, .userform input, .userform select, .userform textarea, .chosen-choices {
    border:0.1rem solid var(--bg);
    border-radius:0.3rem;
    background:var(--light-bg);
    padding:0.5rem 1rem;
}

.components button, .userform button {
    background: var(--cta);
    border: 1px solid #867818;
    border-radius: 0.3rem;
    text-transform: uppercase;
    padding: 0.5rem 1rem;
    margin-top: 1rem;
    cursor: pointer;
    text-decoration: none;
    color: black;
    &:hover {
        border-color: var(--cta);
    }
}


header.site-header {
    padding-top:2rem;
    background:url(../images/AdobeStock_178470290_masked_2.png) no-repeat right center transparent;
    background-size:cover;
    color:white;
}

.site-header-inner {
    background:url(../images/logo.png) no-repeat top left transparent;
    background-size:contain;
}

.site-title {
    color:white;
    text-decoration: none;
    text-shadow:0.1rem 0 0.2rem black;
}

.site-subtitle {
    margin-top:0;
    color:white;
    text-shadow:0.1rem 0 0.2rem black;
}

footer {
    color:white;
    text-align:center;
    padding:1rem;
}

footer a {
    color:white;
}

.hidden {
    display: none;
    visibility: hidden;
    opacity: 0;
}

.popup {
    position: fixed;
    display:flex;
    width: 100%;
    height: 100%;
    margin: 0;
    left: 0;
    top: 0;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    background-color: rgba(200, 200, 200, .8);
    & > * {
        max-width: 550px;
        padding: 1em;
        border-radius: .25em;
        background-color: white;
        margin: 1em;
    }
}

